N°330 Attachments display as table : portal. Various improvements * update CSS for table layout (vertical align, change text-align) * tooltip : fix max size was not used anymore (tooltip was removing the style attributes) * tooltip : fix tooltip always available * delete button background color set to same as validate button * remove "type" column * reduce attachment line height

--- a/datamodels/2.x/itop-portal-base/portal/public/css/portal.scss
+++ b/datamodels/2.x/itop-portal-base/portal/public/css/portal.scss
@@ -1201,13 +1201,17 @@ table .group-actions .item-action-wrapper .panel-body > p:last-child{
 		}
 
 		& tbody > tr > td {
-			text-align: center;
+			text-align: left;
+			vertical-align: middle;
+
+			&:first-child {
+				text-align: center;
+			}
 		}
 	}
 
 	.attachment {
-		height: 95px;
-		overflow-x: hidden;
+		height: 4em;
 
 		.attachment_name {
 			overflow-x: hidden;
@@ -1219,11 +1223,21 @@ table .group-actions .item-action-wrapper .panel-body > p:last-child{
 			margin-top: 3px;
 		}
 
-		&hover {
+		&:hover {
 			background-color: #e0e0e0;
 		}
 	}
 }
+.attachment-tooltip {
+	width: 350px;
+	height: 300px;
+
+	img {
+		max-width: 100%;
+		max-height: 100%;
+	}
+}
+
 .upload_container input{
 	display: inline;
 }
